# SO-UNIVR-SHA256

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client  client_control  cmake_install.cmake  server
include/: common.h  digest.h
src/: client.c  client_control.c  client_shutdown.c  client_status.c  digest.c  server.c
